Added LeadingIndicator code and made plot functions methods of SSModel classes.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,23 +2,33 @@
 
 export(Ptt)
 export(SSModelDynamicGompertz)
+export(SSModelLeadingIndicator)
+export(add_daily_ldl)
+export(alphahat)
 export(argmax)
 export(att)
+export(cross_val)
 export(df2ldl)
 export(forecast.peak)
 export(forecast_peak)
+export(gety)
+export(gety.hat)
+export(mape)
 export(matrixKFS)
+export(modelKFS)
 export(output)
-export(plot_forecast)
 export(plot_gy_ci)
 export(plot_gy_components)
 export(plot_holdout)
+export(plot_log_forecast)
 export(plot_new_cases)
 export(reinitialise_dataframe)
 export(seasonalComp)
 export(write_results)
 exportClasses(FilterResults)
+exportClasses(FilterResultsLI)
 exportClasses(SSModelDynamicGompertz)
+exportClasses(SSModelLeadingIndicator)
 importFrom(KFAS,KFS)
 importFrom(KFAS,SSModel)
 importFrom(KFAS,SSMseasonal)
@@ -47,6 +57,7 @@ importFrom(ggthemes,scale_fill_economist)
 importFrom(ggthemes,theme_economist_white)
 importFrom(magrittr,"%>%")
 importFrom(methods,new)
+importFrom(purrr,partial)
 importFrom(stats,na.omit)
 importFrom(stats,qnorm)
 importFrom(tidyr,pivot_longer)
