Added mape back into filterResults, added EngItalty dataset back

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,7 +13,7 @@ export(forecast.peak)
 export(forecast_peak)
 export(gety)
 export(gety.hat)
-export(mape)
+export(mapes)
 export(matrixKFS)
 export(modelKFS)
 export(output)
